--- a/.gitignore
+++ b/.gitignore
@@ -204,4 +204,15 @@ cython_debug/
 # Marimo
 marimo/_static/
 marimo/_lsp/
-__marimo__/
+__marimo_/
+
+
+# scala stuff
+.bsp/
+.metals/
+.scala-build/
+out/
+.cache/
+.gitignore
+mill
+
