separates util into own file

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,9 +1,10 @@
 version = "3.7.15"
 runner.dialect = scala3
 maxColumn = 120
-align = most
-newlines.alwaysBeforeTopLevelStatements = true
+align.preset = most
+#newlines.alwaysBeforeTopLevelStatements = true
 spaces.inImportCurlyBraces = true
 continuationIndent.callSite = 2
 continuationIndent.defnSite = 2
 rewrite.rules = [RedundantBraces, SortImports]
+
